Version 0.93 (03-10-2015)
- stabilization and acceleration of the EM algorithms  

Version 0.92 (03-09-2015)
- change in c++ code to follow rtkpp 0.9.2 

Version 0.91 (25-11-2014)
- HDPenReg now depends on rtkpp

Version 0.90.1 (21-11-2014)
- update description in DESCRIPTION
- change predict in predict.LarsPath to suppress warnings when loading

Version 0.90 (23-10-2014)
- Add cross-validation on lambda values in HDcvlars
- Change ouput parameter name "fraction" in "minIndex" in HDcvlars
- Change plotCv in plot (to follow generic function name)
- Change HDpredict in predict (to follow generic function name)
- Overload of coef generic function. coef combines computeCoefficients and coeff function