@@ -1,6 +1,6 @@
 Package: HDPenReg
 Version: 0.93
-Date: 2015-09-03
+Date: 2015-12-11
 Title: High-Dimensional Penalized Regression
 Authors@R: c(person("Quentin", "Grimonprez", role = c("aut","cre"), email =
     "quentin.grimonprez@inria.fr"), person("Serge", "Iovleff", role = "aut"))
